# asana-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md  clippy.toml  deny.toml  hooks.toml  install.sh  justfile  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
completions/: _asana-cli  asana-cli.bash  asana-cli.fish  asana-cli.ps1
docs/: api.md  migration.md  reference.md  troubleshooting.md  tutorial.md
docs/plans/add-missing-entities/: overview.md  phase_1_stories.md  phase_2_workspaces_users.md  phase_3_search.md  phase_4_attachments.md  phase_5_status_updates.md  phase_6_teams.md  phase_7_premium_features.md  phase_8_enterprise_features.md
docs/plans/asana-cli/: overview.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md
docs/plans/fix-clippy-errors/: overview.md  phase3_analysis.md  src_api_tasks.md  src_cli_mod.md  src_cli_task.md  src_config.md  src_models_custom_field.md  src_models_task.md  src_output_task.md
docs/plans/fix-subtasks/: overview.md  phase_1.md  phase_2.md  phase_3.md
man/: asana-cli.1
scripts/: generate-completions.sh  generate-man.sh
src/: config.rs  doctor.rs  error.rs  lib.rs  main.rs
src/api/: attachments.rs  auth.rs  client.rs  custom_fields.rs  error.rs  mod.rs  pagination.rs  projects.rs  sections.rs  stories.rs  tags.rs  tasks.rs  users.rs  workspaces.rs
src/cli/: custom_field.rs  mod.rs  project.rs  section.rs  tag.rs  task.rs  user.rs  workspace.rs
src/filters/: mod.rs
src/models/: attachment.rs  custom_field.rs  mod.rs  project.rs  section.rs  story.rs  tag.rs  task.rs  user.rs  workspace.rs
src/output/: mod.rs  project.rs  task.rs
src/templates/: mod.rs
src/templates/templates/: standard_project.toml
tests/: api_client.rs  cli.rs
