[package]
name = "asana-cli"
version = "0.4.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["James Felix Black <jfb@workhelix.com>"]
description = "An interface to the Asana API"
license = "MIT"
repository = "https://github.com/tftio/asana-cli"
keywords = ["cli", "tool", "rust"]
categories = ["command-line-utilities", "development-tools"]

[lints.rust]
unsafe_code = "warn"
missing_docs = "deny"

[lints.clippy]
# Deny common issues
enum_glob_use = "deny"
wildcard_imports = "deny"

# Allow only unavoidable Windows ecosystem duplicates
multiple_crate_versions = "allow"

# Quality checks - maximum aggression
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
anyhow = "1.0"
colored = "3.0"
directories = "5.0"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros", "fs", "signal", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rpassword = "7.3"
secrecy = "0.8"
sha2 = "0.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
async-stream = "0.3"
thiserror = "1.0"
base64 = "0.22"
futures-core = "0.3"
futures-util = "0.3"
workhelix-cli-common = "0.2.0"
dialoguer = { version = "0.11", default-features = false, features = ["editor", "fuzzy-select"] }
regex = "1.11"
csv = "1.3"
tabled = "0.15"
serde_with = "3.11"
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
dateparser = "0.2"

[dev-dependencies]
tempfile = "3.23"
serial_test = "3.1"
mockito = "1.4"
futures-util = "0.3"
